fix: destructive colors in dark mode

--- a/packages/react-ui/src/styles.css
+++ b/packages/react-ui/src/styles.css
@@ -80,9 +80,9 @@
     --primary-300: 257 75% 85%;
     --primary-foreground: 210 20% 98%;
 
-    --destructive-100: 4 100% 60%;
-    --destructive: 4 100% 50%;
-    --destructive-300: 0 96.3% 45%;
+    --destructive-100: 4 100% 20%;
+    --destructive: 4 100% 30%;
+    --destructive-300: 0 96.3% 55%;
 
     --success-100: 166 97% 20%;
     --success: 166 97% 14%;
